--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css" type="text/css">
     <script src="app.js" type="text/javascript"></script>
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:300" rel="stylesheet">
 </head>
 
 <body>
@@ -28,8 +29,17 @@
                 </g>
             </svg></a>
             <a href="https://youtube.com" target="_new"><img src="https://cdn2.iconfinder.com/data/icons/social-icons-color/512/youtube-128.png" alt="YouTube play button icon." class="ytc-youtube-icon"/></a>
-        </div>    
+        </div>          
     </nav>
+
+    <div class="ytc-search-container">
+        <div class="form-group">
+            <label for="ytc-search-input control-label" class="ytc-search-input-label" >search YouTube</label>
+            <input title="Hit enter to submit search." class="form-control" type="text" name="ytc-search-input" id="ytc-search-input" placeholder="find a YouTube video" >
+                <button class="ytc-search-button js-ytc-search-button"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+            </input>
+        </div>          
+    </div>
 </body>
 
 </html>
