error alert on fail get results

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
             </div>
         </div>
 
+        <div class="alert alert-dismissible alert-danger ytc-error-alert js-ytc-error-alert">
+            <strong>Oh snap!</strong> There was an error while retrieving results. Please try again later.
+        </div>
+
         <div class="container ytc-search-results-container">
 
         </div>
