--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="http://bootswatch.com/cosmo/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css" />
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
     <script src="https://apis.google.com/js/api.js"></script>
@@ -49,7 +49,7 @@
         </div>
 
         <div class="alert alert-dismissible alert-danger ytc-error-alert js-ytc-error-alert">
-            <strong>Oh snap!</strong> There was an error while retrieving results. Please try again later.
+            <strong>Oh snap!</strong> There was an error while talking to YouTube :(
         </div>
 
         <div class="container ytc-search-results-container">
